# phototato

./: .gitignore  CMakeLists.txt  build.ps1
.cache/clangd/index/: main.cpp.29CAE0DC57942F20.idx
